[workspace]
members = [
    "chainbridge",
    "example-erc721",
    "example-pallet",
    "assets-handler",
]

[patch.crates-io]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }



