[workspace]
members = [
    "chainbridge",
    "assets-handler",
]

[patch.crates-io]
sp-api = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-keystore = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-staking = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-storage = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-tracing = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-trie = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "10b9da5b6759c51ac9f9ac9bb6c4634c2e25b544" }



