[package]
name = "assets-handler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# ChainX
chainx-primitives = { git = "https://github.com/chainx-org/ChainX",  branch = "rococo-v1", default-features = false  }
xpallet-assets = { git = "https://github.com/chainx-org/ChainX",  branch = "rococo-v1", default-features = false }
xpallet-assets-registrar = { git = "https://github.com/chainx-org/ChainX",  branch = "rococo-v1", default-features = false }


# ChainBridge
chainbridge = { path = "../chainbridge", default-features = false}

[features]
default = ["std"]
std = [
	"serde",
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-balances/std",

	"chainx-primitives/std",
	"xpallet-assets/std",
	"xpallet-assets-registrar/std",
	
	"chainbridge/std",
]
