[package]
name = "assets-handler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate
frame-system = { version='3.0.0', default-features = false }
frame-support = { version='3.0.0', default-features = false }
sp-std = { version='3.0.0', default-features = false }
sp-io = { version='3.0.0', default-features = false }
sp-core = { version='3.0.0', default-features = false }
sp-runtime = { version='3.0.0', default-features = false }
pallet-balances = { version='3.0.0', default-features = false }

# ChainX
chainx-primitives = { path='../../ChainX/primitives', default-features = false  }
xpallet-assets = { path='../../ChainX/xpallets/assets', default-features = false }
xpallet-assets-registrar = { path='../../ChainX/xpallets/assets-registrar', default-features = false }


# ChainBridge
chainbridge = { path = "../chainbridge", default-features = false}

[features]
default = ["std"]
std = [
	"serde",
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-balances/std",

	"chainx-primitives/std",
	"xpallet-assets/std",
	"xpallet-assets-registrar/std",
	
	"chainbridge/std",
]
